- Thu Sep 09 2010 Ira Weiny <weiny2@llnl.gov>

	* : ibtrackerrors.in: Add config file support
	* : pragmatic-IB.conf: Add config file

- Wed Sep 08 2010 Ira Weiny <weiny2@llnl.gov>

	* : tag 1.1.2-2
	* : ibcheckfabric.in: fix incorrect reporting
	* : ibtrackerrors.in: Allow for correct error names from spec

- Mon Aug 23 2010 Ira Weiny <weiny2@llnl.gov>

	* : tag 1.1.2-1
	* : ibtrackerrors.in: add stderr output to log file.

- Thu Aug 19 2010 Ira Weiny <weiny2@llnl.gov>

	* : ibtrackerrors.in: allow additional erros to be suppressed
	* : ibhcacounters: remove message which says this only works on ConnectX

- Fri Aug 06 2010 Ira Weiny <weiny2@llnl.gov>

	* : tag 1.1.1-1
	* : ibtrackerrors: Add support to limit the scan to switches only

- Mon Aug 02 2010 Albert Chu <chu11@llnl.gov>

	* : add check_wiring_sierra.pl

- Tue Jul 29 2010 Ira Weiny <weiny2@llnl.gov>

	* : tag 1.1.0-2
	* : ibnodesinmcast: Allow for consolidated MLID's without consolidated MGID's
	* : ibtraceroute: use absolute path for rdma_cm_query

- Tue Jul 20 2010 Ira Weiny <weiny2@llnl.gov>

	* : tag 1.1.0-1
	* : ibgraphfabric: Convert to libibnetdisc ABI version 4
	* : slurm_topology: Convert to libibnetdisc ABI version 4

- Tue Jul 20 2010 Al Chu <chu11@llnl.gov>

	* : fix typos

- Wed Jul 14 2010 Ira Weiny <weiny2@llnl.gov>

	* : tag 1.0.6-1

- Fri Jul 09 2010 Ira Weiny <weiny2@llnl.gov>

	* : ibhcacounters: Add support for QIB cards

- Fri Jul 09 2010 Ira Weiny <weiny2@llnl.gov>

	* : ibcheckverbs: explicitly call ibv_rc_pingpong
	* : ibcheckverbs: explicitly call pdsh
	* : ibcheckverbs: add support for renamed ib_rdma_bw tool

- Fri Jun 25 2010 Ira Weiny <weiny2@llnl.gov>

	* : ibsrp.in: fix issue of script killing opensm process which were not
	    owned by the script.  Also include stdout/stderr in log file.

- Mon May 17 2010 Ira Weiny <weiny2@llnl.gov>

	* : ibcheckverbs: clean up output

- Tue May 04 2010 Ira Weiny <weiny2@llnl.gov>

	* : tag 1.0.5-1