@@ -1,5 +1,8 @@
 - Thu Sep 09 2010 Ira Weiny <weiny2@llnl.gov>
 
+	* : ibsrp8.in: fixed config file location
+	* : ibtrackerrors8.in: Add ibtrackerrors man page
+	* : ibtrackerrors.in: Fix help message
 	* : ibtrackerrors.in: Add config file support
 	* : pragmatic-IB.conf: Add config file
 
